--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=123456
+#spring.redis.password=123456
 spring.redis.pool.max-active=2000
 spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=500
@@ -41,7 +41,7 @@ fdfs.so-timeout=1501
 fdfs.connect-timeout=1601
 fdfs.thumb-image.width=150
 fdfs.thumb-image.height=150
-fdfs.tracker-list[0]=127.0.0.1:22122
+fdfs.tracker-list[0]=192.168.136.128:22122
 #从池中借出的对象的最大数目
 pool.max-total=153
 fdfs.pool.max-wait-millis=102
@@ -49,7 +49,10 @@ fdfs.pool.jmx-name-base=1
 fdfs.pool.jmx-name-prefix=1
 
 
+
 #上传远程服务器访问地址
-fileServerUrl=127.0.0.1
+fileServerUrl=192.168.136.128
 
 #spring.jmx.enabled=false
+
+logging.level.com.zw=debug
